# olvid-rs

./: .env  Cargo.toml  README.md  olvid_engine.db
crates/core/: Cargo.toml
crates/core/resources/test/: TestVectorsAES256CTR.json  TestVectorsHMACWithSHA256.json  TestVectorsPRNGGenBigInt.json  TestVectorsPRNGWithHMACWithSHA256.json  TestVectorsServerAuthentication.json
crates/core/src/: core.rs  crypto.rs  encoding.rs  lib.rs
crates/core/src/core/: datatypes.rs  helpers.rs
crates/core/src/core/datatypes/: edwards_curve.rs  keys.rs
crates/core/src/core/datatypes/keys/: asymmetric.rs  cryptographic_key.rs  symmetric.rs
crates/core/src/core/datatypes/keys/asymmetric/: authentication_key.rs  edwards_key.rs  kem_key.rs  private_key.rs  public_key.rs  signature_key.rs
crates/core/src/core/datatypes/keys/symmetric/: aes_key.rs  auth_enc_key.rs  mac_key.rs  (+1 more)
crates/core/src/core/helpers/: bitwise_operations.rs
crates/core/src/crypto/: aes.rs  auth_encryption.rs  authentication.rs  commitment.rs  elliptic_curves.rs  errors.rs  hash.rs  identity.rs  kdf.rs  kem.rs  mac.rs  prng.rs  signature.rs  utils.rs
crates/core/src/crypto/identity/: cryptographic_identity.rs
crates/core/src/encoding/: encoding.rs  errors.rs  types.rs
crates/core/src/encoding/types/: boolean.rs  bytes_array.rs  cryptographic_key.rs  dictionary.rs  integer.rs  list.rs  string.rs  unsigned_big_integer.rs
crates/engine/: .env  Cargo.toml  olvid_engine.db
crates/engine/migrations/: 20250308140753_identities.sql
crates/engine/src/: lib.rs
crates/engine/src/entities/: identity.rs
(+27 files in other folders)
