[package]
name = "olvid-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
ctr = "0.9.2"
hex = "0.4.3"
lazy_static = "1.5.0"
num = "0.4.3"
quote = "1.0.37"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
# ring = "0.17.8"
# rust-crypto = "0.2.36"
syn = "2.0.77"
thiserror = "1.0.63"
macros = { path = "../macros" }
hmac = {version = "0.12.1", features = ["reset"]}
sha2 = "0.10.8"
rand = "0.8.5"
crypto-bigint = { version = "0.6.0-rc.5", features = ["alloc", "zeroize"]}
url = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["arbitrary_precision"]}

[dev-dependencies]
rayon = "1.10"
