[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
olvid-core = { path = "../core" }
uuid = { version = "1.12.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
jose-jwk = "0.1.2"
thiserror = "1.0.63"
url = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["arbitrary_precision"]}
getrandom = "0.3.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ] }
bon = "3.4.0"
